--- a/app/src/main/res/layout/activity_small_talk.xml
+++ b/app/src/main/res/layout/activity_small_talk.xml
@@ -48,10 +48,10 @@
             android:id="@+id/Abfrage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="25dp"
+            android:layout_marginEnd="25dp"
             android:layout_weight="1"
             android:backgroundTint="@android:color/holo_blue_light"
-            android:text="Spielend lernen "
+            android:text="@string/spielend_lernen"
             android:textColor="@android:color/black"
             android:textSize="24sp" />
 
@@ -59,10 +59,10 @@
             android:id="@+id/Mr_x"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
+            android:layout_marginEnd="25dp"
             android:layout_weight="1"
             android:backgroundTint="@android:color/holo_orange_dark"
-            android:text="Mr.X spielen"
+            android:text="@string/mr_x_spielen"
             android:textColor="@android:color/black"
             android:textSize="24sp" />
     </LinearLayout>
