--- a/app/src/main/res/layout/activity_abfrage.xml
+++ b/app/src/main/res/layout/activity_abfrage.xml
@@ -4,12 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="25dp"
+    android:layout_marginTop="25dp"
+    android:layout_marginRight="25dp"
+    android:layout_marginBottom="25dp"
     android:orientation="vertical"
     tools:context=".Abfrage">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="75dp"
+        android:layout_weight="0"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="600dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="-100dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Spielend lernen"
+            android:textColor="@android:color/black"
+            android:textSize="36sp" />
+        <Button
+            android:id="@+id/home1"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="00dp"
+            android:layout_weight="0"
+            android:backgroundTint="@android:color/holo_blue_light"
+            android:text="HOME"
+            android:textColor="@android:color/black"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
         android:layout_gravity="center"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="25dp"
